Changelog
=========

2.7 (unreleased)
----------------

- Allow multiple worlkflows.
  If many workflows are embedded with class, each workflow is binded in workflows.xml.
  'use_workflow' attribute adds a workflow to embedded workflows.
  [thomasdesvenain]

- Abstract class have no workflow binding.
  [thomasdesvenain]

- Import Column classes with DataGridField.
  [thomasdesvenain]

- Added a protected section in workflows definition.xml.
  [thomasdesvenain]

- View action is always ${object_url}/view, otherwise select layout doesn't
  work anymore.
  [thomasdesvenain]

- When we add content_icon with null value on a class, icon expr is empty.
  [thomasdesvenain]

- Add Site Administrator to ignored extra roles if plone >= 4.1.
  [thomasdesvenain]

- Default plone target version is 4.1.
  It's easier to change default version.
  [thomasdesvenain]

- Fixed configure.zcml core section protection.
  [thomasdesvenain]

- Now, manage formats of generic setup version number as n, n1.n2,
  and not only n1.n2.n3.
  [thomasdesvenain]

- If plone_target_version tagged-value is set to 4.0 or 4.1, then generate
  icon_expr instead of content_icon for FTIs.
  [vincentfretin]

- Add a protected FOOT section in type.xml.
  [vincentfretin]

- Add vocabulary_factory tagged value.
  [thomasdesvenain]

- Avoid deprecated import warning under Zope 2.13+.
  [thomasdesvenain]

- Fixed inconstancy between template name and portlet class by removing .pt in the generation
  [jihaisse]

- Added method generation for portlet class.
  The portlet class will look like the classic portlet.
  [jihaisse]


2.6 (2011-03-10)
----------------

- make z3 interfaces the default interface and dont accept any longer zope2
  interfaces
  [jensens]

- Use portal_type tagged-value if available instead of class name when
  generating workflows.xml.
  [vincentfretin]

- remove unneccessary imports for remember/membrane,
  view permissions can now additionally be specified in the dependency